manifests/suren-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: suren
spec: {}
status: {}
