manifests/config-and-secrets.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  volumes: 
  - name: myvolume 
    secret: 
      secretName: suren-secret 

  containers:
  - image: nginx:1.19.0
    imagePullPolicy: IfNotPresent
    name: nginx

    volumeMounts: 
    - name: myvolume 
      mountPath: /etc/secrets 

    resources:
      limits: 
       memory: "64Mi"
       cpu: "100m"
