manifests/web1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: web1
  name: web1
spec:
  containers:
  - image: nginx:1.19.0
    name: web1
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
