manifests/web2-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: web2
  name: web2
spec:
  containers:
  - image: nginx:1.19.0
    name: web2
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
