manifests/cw-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: cw-app
  name: cw-app-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: cw-app
  type: ClusterIP
status:
  loadBalancer: {}
